--- a/BIG PROJECT 01/input.css
+++ b/BIG PROJECT 01/input.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h3{
+    @apply mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl;
+    }
+}
+
+.section-container {
+    @apply max-w-6xl mx-auto text-center;
+}
+
+.button-container {
+@apply flex flex-col md:flex-row justify-center items-center w-full text-xl text-white md:space-y-0 space-y-6 md:space-x-6;
+q}
+
+
+body {
+  background-image: url("../images/bg-header-desktop.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+@media (max-width: 576px) {
+  body {
+    background-image: url("../images/bg-header-mobile.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
